# uiglue

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  uiglue.sln
bind_test/: CMakeLists.txt  bind_test.exe.manifest  bind_test.rc  entry.cc  main_view.cc  main_view.h
curt/: CMakeLists.txt  api_params.cc  api_params.h  com.h  curt.cc  curt.h  error.cc  error.h  fwd_windows.h  handle.h  include_windows.h  types.cc  types.h  util.cc  util.h  win_types.h  win_util.cc  win_util.h
examples/bind_test/: CMakeLists.txt  entry.cc  main_view.cc  main_view.h  resource.h
examples/dialog/: CMakeLists.txt  dialog.rc  entry.cc  main_dialog.cc  main_view.cc  main_view_model.cc  main_view_model.h  resource.h  slider_view.cc  slider_view_model.cc  slider_view_model.h  view_model.cc  view_model.h  views.h
examples/hello_world/: CMakeLists.txt  entry.cc  view.cc  view.h
hello_world/: CMakeLists.txt  entry.cc  view.cc
test/: CMakeLists.txt  entry.cc  main_view.cc  main_view.h  uiglue.rc
tests/: CMakeLists.txt  observable.cc  test_main.cc  value_accessor.cc
uiglue/: CMakeLists.txt  binding.h  binding_handler.h  binding_handler_cache.cc  binding_handler_cache.h  bindings.cc  bindings.h  bindings_detail.h  builtin_bindings.h  builtin_controls.h  commands.h  computed.h  entry.cc  filesystem.h  fwd.h  fwd_windows.h  i_untyped_observable.h  i_view_model_ref.h  include_windows.h  main_view.cc  main_view.h  make_unique.h  member_map.h  observable.cc  observable.h  pch.cc  pch.h  remove_cv_t.h  resource.h  uiglue.exe.manifest  uiglue.vcxproj  uiglue.vcxproj.filters  untyped_observable.h  value_accessor.cc  value_accessor.h  view.cc  view.h  view_factory.cc  view_factory.h  view_messages.h  (+8 more)
views/: main.json
